# Chris-Studio

./: .gitignore  CHANGELOG.md  FILES_TO_UPLOAD.txt  FIX_UPLOAD_README.md  MACOS_RELEASE_CHECKLIST_v1.8.zh-CN.md  MACOS_RELEASE_CHECKLIST_v2.1.zh-CN.md  MANIFEST.sha256  MANIFEST.txt  PATCH_FILE_LIST.txt  PATCH_FILE_MANIFEST.sha256  PATCH_SHA256SUMS.txt  PATCH_UPLOAD_README.md  README.md  README.zh-CN.md  START_HERE.zh-CN.md  UPLOAD_COMPLETE_PACKAGE.md  UPLOAD_V2.2.0.md  UPLOAD_V2.2.0_CODEX_STREAMING_AGENT.md  UPLOAD_V2.2.0_LIVE_STREAM_COMPUTER_PROGRESS_FIX.zh-CN.md  UPLOAD_V2.2.0_RUNTIME_UI.md  V1.7.0_CI_INSTALL_FIX.zh-CN.md  V1.7.1_API_KEY_FIX.zh-CN.md  V1.8.0_CHANGE_SUMMARY.zh-CN.md  V2.0.0_NATIVE_DIALOG_FIX.zh-CN.md  V2.1.0_CHANGE_SUMMARY.zh-CN.md  V2.2.0_CHANGE_SUMMARY.zh-CN.md  V2.2.0_CODEX_STREAMING_AGENT_CHANGE_SUMMARY.zh-CN.md  V2.2.0_LIVE_STREAM_COMPUTER_PROGRESS_CHANGE_SUMMARY.zh-CN.md  V2.2.0_RUNTIME_UI_CHANGE_SUMMARY.zh-CN.md  VALIDATION_REPORT_V2.2.0_CODEX_STREAMING_AGENT.md  VALIDATION_REPORT_v2.2.0.md  VALIDATION_REPORT_v2.2.0_LIVE_STREAM_COMPUTER_PROGRESS_FIX.zh-CN.md  VALIDATION_REPORT_v2.2.0_RUNTIME_UI.md  _fix_scan.cjs  fix_v1011_readme.py  fix_v103_readme.py  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
docs/: RELEASES.md  RELEASE_CHECKLIST.md  media-collector.md  model-router.md  obsidian-connector.md
scripts/: check_shortcuts.ps1  release_sanity.js  (+7 more)
(+138 files in other folders)
