[package]
name = "tokenfence-studio"
version = "1.0.18"
description = "TokenFence Studio Desktop App"
authors = ["TokenFence"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0.18", features = [] }

[dependencies]
tauri = { version = "1.0.18", features = [] }
serde = { version = "1.0.18", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
ureq = { version = "1.0.18", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

